--- a/first-proto/day_large.css
+++ b/first-proto/day_large.css
@@ -56,16 +56,21 @@ nav a {
 
 
 #schedule {
-    grid-column: 1;
+    grid-column: 1 / 2;
     grid-row: 2;
     background-color: rgb(118, 236, 236);
 }
 
 #mood_fields_1 {
-    grid-column: 2;
+    grid-column: 2 / 3;
     grid-row: 2;
     background-color: rgb(242, 126, 240);
 }
+
+#mood_field_text {
+    width: 90%;
+    height: 10vh;
+} 
 
 #mood_fields_2 {
     grid-column: 1 / 3;
