--- a/first-proto/day.css
+++ b/first-proto/day.css
@@ -1,3 +1,8 @@
+@import url(day_large.css);
+@import url(day_small.css);
+
+@import url(day_schedule.css);
+
 body {
     display: grid;
     place-items: center;
@@ -15,26 +20,4 @@ nav a {
     margin: 5px 15px;
     color: black;
     text-decoration: none;
-}
-
-.scheduled_activity  {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-.scheduled_activity .activity_remove {
-    width: 30px;
-    height: 30px;
-    margin: auto 5% auto auto;
-    justify-self: flex-end;
-}
-
-.scheduled_activity h2 {
-    margin: .5em 0 .5em 3%;
-}
-
-.scheduled_activity p {
-    width: 100%;
-    margin: .5em 0 .5em 3%;
-
 }
