--- a/first-proto/day_schedule.css
+++ b/first-proto/day_schedule.css
@@ -7,6 +7,10 @@
     background-color: rgb(118, 236, 236);   
 }
 
+.scheduled_activities {
+    margin: 2%;
+}
+
 .scheduled_activity  {
     display: flex;
     flex-direction: row;
@@ -50,5 +54,6 @@
 }
 
 .activity_adder {
-    margin-top: auto;
+    margin: auto auto 2% auto;
+
 }
