Fix(css): Change a name to the correct one

--- a/first-proto/css/day/day_schedule.css
+++ b/first-proto/css/day/day_schedule.css
@@ -41,7 +41,7 @@
     margin: auto 5px auto 5px;
 }
 
-.scheduled_activity .activity_remove {
+.scheduled_activity .activity_remove_btn {
     width: 30px;
     height: 30px;
     margin: auto 5% auto auto;
